--- a/includes/modules/Media-Slider/style.css
+++ b/includes/modules/Media-Slider/style.css
@@ -1,9 +1,4 @@
-.et-fb-all-modules .cacm_content_slider:before {
-    content: '\61' !important;
-}
- 
-.et-fb-all-modules .cacm_content_slider {
-    background-color: #3949ab;
-    color: white;
-    overflow: visible;
+.et-db #et-boc .et-fb-modules-list ul>li.cacm_media_slider:before {
+    font-family: 'CaGov'!important;
+    content: "\e658"!important;
 }
